[project]
name = "etabli"
version = "0.1.0"
description = ""
authors = [{ name = "Antoine Gallix", email = "antoine.gallix@a2ei.org" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
etabli = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
